--- a/www/css/style.css
+++ b/www/css/style.css
@@ -145,9 +145,9 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 .header .header_right .header_user_info .user_info img {width: 24px; height: auto; float: left; margin-right: 7px;}
 .header .header_right .header_user_info .user_info h2 {font-weight: 300; font-family: 'Lato'; font-size: 14px; float: left; margin: 0px; padding-top: 2%; letter-spacing: 1.4px;}
 .header .header_right .header_user_info .user_money {width: 100%;}
-.header .header_right .header_user_info .user_money .money_pesos {float: left; margin-right: 5%;}
+.header .header_right .header_user_info .user_money .money_pesos {float: left; margin: 0 5% 0 2.2rem;}
 .header .header_right .header_user_info .user_money .money_pesos img {width: 20px; height: auto; float: left; margin-top: 3%}
-.header .header_right .header_user_info .user_money .money_pickcoins {float: left;}
+.header .header_right .header_user_info .user_money .money_pickcoins {float: left; margin: 0 5% 0 2.2rem;}
 .header .header_right .header_user_info .user_money .money_pickcoins img {width: 14px; height: auto; float: left;}
 .header .header_right .header_user_info .user_money span {display: block; float: left; font-size: 12px; font-family: 'Lato'; margin-left: 5px;}
 .header .header_right .header_filtros {width: 20%; float: right; text-align: center;}
@@ -259,6 +259,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .registro_quiniela a:first-child {margin-right: 10px;}
 .quiniela_single .quiniela_info {margin-right: 10px; }
 
+.error_inline{ display: block; clear: both; margin: 2rem 0 0 0; text-align: center; color: #f55934; text-transform: uppercase; font-size: 10px;}
+
 .quinielas_dropdowns {width: 100%; margin: 20px 0;}
 .quinielas_dropdowns select {color: #fff; background: #000; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
 .quinielas_dropdowns select:last-child {margin-right: 0px;}
@@ -337,13 +339,13 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 .radio_group.selection label{padding: 2px 2px 2px 30px; }
 
-.local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+/*.local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .local.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .visitante.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; right: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .visitante.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .empate.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: 35%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .empate.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
-
+*/
 .dos_opciones .opcion_prop.radio_group:first-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .dos_opciones .opcion_prop.radio_group:first-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 30%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .dos_opciones .opcion_prop.radio_group:last-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
