--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -55,7 +55,6 @@
 			</a><!-- link_wrapper -->
 			{{^ data.closed}}
 				<div class="registro_quiniela clearfix">
-					<a class="hook" data-resource="lobby" href="lobby.html"><img src="{{cordova_full_path}}images/cierre.png"></a>
 					<a id="reg_into_game"><img src="{{cordova_full_path}}images/registrarse.png"></a>
 				</div><!-- opciones registro -->
 			{{/ data.closed}}
@@ -63,12 +62,8 @@
 				<div class="quinielas_dropdowns clearfix">
 						
 						<form id="pickActionsForm" action="" method="POST">
-							<select id="select_copy_picks" name="select_copy_picks">
+							<select id="select_copy_picks" class="unique" name="select_copy_picks">
 								<option value="">Copiar picks</option>
-							</select>
-
-							<select id="select_entries" name="select_entries">
-								<option value="">Mis Registros</option>
 							</select>
 						</form>
 				</div><!-- dropdowns -->
@@ -243,7 +238,6 @@
 							</div><!-- balance -->
 
 							<div class="botones clarfix">
-								<a id="closeRegister"><img src="{{cordova_full_path}}images/regresar.png"></a>
 								<input type="submit" id="sendRegister">
 							</div>
 						</form>
@@ -251,6 +245,7 @@
 
 				</div><!-- quiniela_registro_overlay -->
 			{{/ data.closed}}
+			<a id="savePicks" class="green_button">Guardar picks</a>
 		</div><!-- content -->
 		{{> footer}}
 	</div><!-- container -->
