--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -187,7 +187,7 @@
 							</div><!-- no_registros -->
 							<div class="copiar_picks clearfix">
 								<span class="pregunta">Utilizar los picks elegidos para todos los registros</span>
-								<input type="checkbox" name="use_same_picks" value="true">
+								<input type="checkbox" name="use_same_picks" value="1">
 							</div><!-- no_registros -->
 							<div class="balance clearfix">
 								<div class="disponible clearfix">
