--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -22,16 +22,14 @@
 				<h3>DEPORTE</h3>
 				<ul class="clearfix">
 					<li onclick="$('#deporte_soccer').hide(); app.clear_filters('sport');" class="selected"><h3>TODOS</h3></li>
-					<li onclick="$('#deporte_soccer').show(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-football.png"></li>
-					<li onclick="$('#deporte_soccer').hide(); $('#deporte_baseball').show();" > <img src="{{cordova_full_path}}images/ion-ios-basketball-outline.png"></li>
-					<li onclick="$('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-baseball.png"></li>
-					<li onclick="$('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-nfl.png"></li>
+					<li onclick="app.stack_filter('sport', '1'); $('#deporte_soccer').show(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-football.png"></li>
+					<li onclick="app.stack_filter('sport', '3'); $('#deporte_soccer').hide(); $('#deporte_baseball').show();" > <img src="{{cordova_full_path}}images/ion-ios-basketball-outline.png"></li>
+					<li onclick="app.stack_filter('sport', '4'); $('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-baseball.png"></li>
+					<li onclick="app.stack_filter('sport', '2'); $('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-nfl.png"></li>
 				</ul>
 				<ul class="clearfix" id="deporte_soccer" style="display: none;">
-					
 				</ul>
-				<ul class="clearfix" id="deporte_baseball" style="display: none;">
-					
+				<ul class="clearfix" id="deporte_baseball" style="display: none;">	
 				</ul>
 			</div><!-- filtros_deporte -->
 			<div class="filtros_tipo clearfix">
