--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -26,6 +26,7 @@
 					<li onclick="app.stack_filter('sport', '3'); $('#deporte_soccer').hide(); $('#deporte_baseball').show();" > <img src="{{cordova_full_path}}images/ion-ios-basketball-outline.png"></li>
 					<li onclick="app.stack_filter('sport', '4'); $('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-baseball.png"></li>
 					<li onclick="app.stack_filter('sport', '2'); $('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-nfl.png"></li>
+					<li onclick="app.stack_filter('sport', '8'); $('#deporte_soccer').hide(); $('#deporte_baseball').hide();" > <img src="{{cordova_full_path}}images/icon-boxing.png"></li>
 				</ul>
 				<ul class="clearfix" id="deporte_soccer" style="display: none;">
 				</ul>
