--- a/www/views/detail-quiniela-live.hbs
+++ b/www/views/detail-quiniela-live.hbs
@@ -54,6 +54,10 @@
 				</div><!-- quiniela_content -->
 			</div><!-- quiniela -->
 		</a><!-- link_wrapper -->
+		<div id="lesDrops" class="quinielas_dropdowns live clearfix">
+			
+	
+		</div><!-- dropdowns -->
 		<div class="tabs_quiniela clearfix">
 			<ul>
 				<li class="selected"><a href="">Picks</a></li>
@@ -64,15 +68,13 @@
 				<li><a class="hook" data-resource="detail-scores" href="detail.html?registered=true&tab=scores">Marcadores</a></li>
 			</ul>
 		</div>
-		<div id="lesDrops" class="quinielas_dropdowns live clearfix">
-			
-	
-		</div><!-- dropdowns -->
-
 		
-		<div id="insertPartidos" class="partidos clearfix radio_group">
+		<div id="tabContainer" class="tabs">
+			<div id="insertPartidos" class="partidos clearfix radio_group">
 
-		</div><!-- partidos -->
+			</div><!-- partidos -->
+		
+		</div>
 		
 		
 	</div><!-- content -->
